# zed

./: Cargo.toml
assets/settings/: default.json
crates/copilot/src/: copilot.rs
crates/database_panel/: Cargo.toml
crates/database_panel/src/: database_panel.rs  database_panel_settings.rs
crates/database_view/: Cargo.toml
crates/node_runtime/: Cargo.toml
crates/node_runtime/src/: node_runtime.rs
crates/ui/src/components/: icon.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
